--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,13 +4,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: red;
+  background: $base-color;
   max-width: 1920px;
-  padding: 5px 45px;
   margin: 0 auto;
 
-  @include fluid-size("padding-top", 320px, 1920px, 2px, 5px);
-  @include fluid-size("padding-bottom", 320px, 1920px, 2px, 5px);
-  @include fluid-size("padding-left", 320px, 1920px, 10px, 45px);
-  @include fluid-size("padding-right", 320px, 1920px, 10px, 45px);
+  @include fluid-size("padding-top", 768px, 1920px, 2px, 5px);
+  @include fluid-size("padding-bottom", 768px, 1920px, 2px, 5px);
+  @include fluid-size("padding-left", 768px, 1920px, 10px, 45px);
+  @include fluid-size("padding-right", 768px, 1920px, 10px, 45px);
 }
