--- a/src/components/pages/Events/EventCard/EventCard.module.scss
+++ b/src/components/pages/Events/EventCard/EventCard.module.scss
@@ -4,9 +4,9 @@
   font-family: "Roboto";
 
   @media (max-width: 768px) {
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
-    @include fluid-size(gap, 320px, 768px, 5px, 10px);
+    @include fluid-size(gap, 320px, 768px, 10px, 20px);
   }
 }
 
@@ -41,6 +41,6 @@
 
   @media (max-width: 768px) {
     @include fluid-size(width, 320px, 768px, 300px, 700px);
-    @include fluid-size(height, 320px, 768px, 144px, 360px);
+    // @include fluid-size(height, 320px, 768px, 144px, 360px);
   }
 }
