--- a/src/components/pages/Events/Events.module.scss
+++ b/src/components/pages/Events/Events.module.scss
@@ -6,14 +6,30 @@
   @include fluid-size("padding-left", 768px, 1920px, 64px, 160px);
   @include fluid-size("padding-right", 768px, 1920px, 64px, 160px);
 
+  @media (max-width: 768px) {
+    @include fluid-size("padding-left", 320px, 768px, 10px, 15px);
+    @include fluid-size("padding-right", 320px, 768px, 10px, 15px);
+  }
+
   .center {
     text-align: center;
   }
+  .upcomingTitle {
+    @include fluid-size("margin-top", 320px, 1920px, 34px, 201px);
+  }
 
-  .subtitle {
-    text-align: center;
+  .upcoming {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
 
-    @include fluid-type(768px, 1920px, 8px, 20px);
-    @include fluid-size("margin-top", 320px, 1920px, 10px, 24px);
+    @include fluid-size(margin-top, 320px, 1920px, 10px, 60px);
+    @include fluid-size(gap, 320px, 1920px, 50px, 180px);
+
+    @media (min-width: 769px) {
+      li:nth-child(even) {
+        flex-direction: row-reverse;
+      }
+    }
   }
 }
