Push button arrow to the right

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -37,6 +37,10 @@
     stroke: $green;
   }
 
+  .arrowIcon {
+    margin-left: auto;
+  }
+
   &:hover {
     background: #e6e6e6;
     color: #164624;
