--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -37,6 +37,8 @@
       font-weight: 700;
 
       @include fluid-type(768px, 1920px, 12px, 22px);
+
+      @media (max-width: 768px) { text-align: center; }
     }
 
     .socialWrapperOfIcons {
@@ -48,6 +50,11 @@
 
       @include fluid-size(gap, 768px, 1920px, 13px, 33px);
       @include fluid-size("margin-top", 768px, 1920px, 8px, 16px);
+
+      @media (max-width: 768px) {
+        margin-top: 16px;
+        gap: 25px;
+      }
     }
 
     .socialIconWrap {
@@ -55,6 +62,11 @@
 
       @include fluid-size(width, 768px, 1920px, 15px, 26px);
       @include fluid-size(height, 768px, 1920px, 15px, 26px);
+
+      @media (max-width: 768px) {
+        width: 20px;
+        height: auto;
+      }
     }
 
     .socialIcon {
@@ -62,8 +74,6 @@
       height: auto;
       max-width: 26px;
     }
-
-    @media (max-width: 768px) { text-align: center; }
   }
 
   .likeUs {
