--- a/src/components/Home/PastEventSlider/PastEventSlider.module.scss
+++ b/src/components/Home/PastEventSlider/PastEventSlider.module.scss
@@ -22,6 +22,7 @@
 .subheading {
   font-size: 24px;
   font-weight: 300;
+  margin-bottom: 40px;
 
   @include fluid-type(320px, 1024px, 16px, 24px);
 }
@@ -37,6 +38,7 @@
   align-items: center;
   gap: 32px;
   flex-wrap: nowrap;
+  max-width: 100%;
 }
 
 .card {
