--- a/src/components/Home/EventSlider/EventSlider.module.scss
+++ b/src/components/Home/EventSlider/EventSlider.module.scss
@@ -1,80 +1,125 @@
 .sliderWrapper {
-  padding: 40px 0;
   font-family: "Roboto", sans-serif;
   overflow: hidden;
+  position: relative;
+
+  @include fluid-size("padding-top", 768px, 1920px, 20px, 40px);
+  @include fluid-size("padding-left", 768px, 1920px, 20px, 0px);
+  @include fluid-size("padding-right", 768px, 1920px, 20px, 0px);
 }
 
 .title {
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 700;
   color: #1b572c;
   margin-bottom: 24px;
   text-align: center;
+
+  @include fluid-type(768px, 1920px, 16px, 24px);
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: #061f13;
+  margin-bottom: 24px;
 }
 
 .slider {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: hidden;
-  gap: 24px;
-  padding-bottom: 16px;
+  justify-content: space-between;
+
+  @include fluid-size("gap", 768px, 1920px, 16px, 36px);
+  @include fluid-size("padding-bottom", 768px, 1920px, 4px, 16px);
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
 }
 
 .card {
   background: white;
-  border: 1px solid #e0e0e0;
   border-radius: 8px;
-  width: 180px;
-  min-width: 180px;
+  min-height: 170px;
   flex-shrink: 0;
-  padding: 16px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   transition: transform 0.2s ease-in-out;
+  color: #000;
+  gap: 12px;
+
+  @include fluid-size("padding", 768px, 1920px, 4px, 8px);
+  @include fluid-size("width", 768px, 1920px, 110px, 240px);
+  @include fluid-size("min-width", 768px, 1920px, 110px, 240px);
+
+  @media (max-width: 768px) {
+    min-height: 100px;
+  }
+
+  @media (max-width: 768px) {
+    width: 80%;
+    min-width: 80%;
+  }
+
+  @media (max-width: 425px) {
+    width: 100%;
+    min-width: 100%;
+  }
 }
 
 .card:hover {
   transform: translateY(-4px);
+
+  @media (max-width: 768px) {
+    transform: translate(4px, 0);
+  }
 }
 
 .day {
-  font-size: 20px;
   font-weight: bold;
   color: #1b572c;
-  margin-bottom: 8px;
-}
 
-.title {
-  font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 6px;
-  color: #2e2e27;
+  @include fluid-type(768px, 1920px, 16px, 24px);
 }
 
 .desc {
-  font-size: 14px;
-  color: #555;
-  margin-bottom: 12px;
+  font-family: "Lato";
+
+  @include fluid-type(768px, 1920px, 14px, 18px);
 }
 
 .link {
-  font-size: 13px;
-  color: #1b572c;
+  font-family: "Lato";
+  color: inherit;
   text-decoration: none;
   margin-top: auto;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  @include fluid-type(768px, 1920px, 14px, 18px);
 }
 
 .link:hover {
   text-decoration: underline;
 }
 
+.icon {
+  width: 14px;
+  height: 14px;
+}
+
 .navButtons {
   display: flex;
   justify-content: center;
-  gap: 12px;
-  margin-top: 16px;
+  gap: 18px;
+
+  @include fluid-size("margin-top", 768px, 1920px, 20px, 32px);
 }
 
 .navButtons button {
