--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -13,3 +13,17 @@
   font-weight: 100 900;
   font-style: italic;
 }
+
+@font-face {
+  font-family: "Lato";
+  src: url("../assets/fonts/Lato-Regular.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+}
+
+// @font-face {
+//   font-family: "Lato";
+//   src: url("../assets/fonts/Lato-Light.ttf") format("truetype");
+//   font-weight: 100 900;
+//   font-style: normal;
+// }
