--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -16,8 +16,22 @@
 
 @font-face {
   font-family: "Lato";
+  src: url("../assets/fonts/Lato-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Lato";
   src: url("../assets/fonts/Lato-Regular.ttf") format("truetype");
-  font-weight: 100 900;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url("../assets/fonts/Lato-Bold.ttf") format("truetype");
+  font-weight: 700;
   font-style: normal;
 }
 
