alumni, button variant, translations, icons, modal

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -19,6 +19,12 @@
   color: #fff;
   transition: background 0.3s ease;
 
+  // .arrowIcon {
+  //   @media (max-width: 768px) {
+  //     display: none;
+  //   }
+  // }
+
   svg path {
     stroke: #fff;
   }
