--- a/src/components/UI/Title/Title.module.scss
+++ b/src/components/UI/Title/Title.module.scss
@@ -1,6 +1,6 @@
 .title {
   color: #2e2e27;
-  font-family: "Roboto";
+  font-family: "Lato";
 
   @include fluid-type(768px, 1920px, 24px, 60px);
 }
