--- a/src/components/pages/Alumni/AlumniCard/AlumniCard.module.scss
+++ b/src/components/pages/Alumni/AlumniCard/AlumniCard.module.scss
@@ -16,7 +16,7 @@
   @include fluid-size(width, 768px, 1920px, 271px, 678px);
   @include fluid-size(height, 768px, 1920px, 240px, 601px);
 
-  .photoIcon {
+  .photoImg {
     width: 100%;
     height: auto;
     max-width: 678px;
@@ -24,7 +24,7 @@
 
     @media (max-width: 768px) {
       max-width: 406px;
-      min-width: 162px;
+      min-width: 180px;
     }
   }
 
@@ -42,8 +42,8 @@
   }
 
   @media (max-width: 768px) {
-    @include fluid-size(width, 320px, 768px, 162px, 406px);
-    @include fluid-size(height, 320px, 768px, 144px, 360px);
+    @include fluid-size(width, 320px, 768px, 271px, 406px);
+    @include fluid-size(height, 320px, 768px, 240px, 360px);
   }
 }
 
