--- a/src/components/pages/Publications/PublicationCard/PublicationCard.module.scss
+++ b/src/components/pages/Publications/PublicationCard/PublicationCard.module.scss
@@ -1,4 +1,4 @@
-.alumniCard {
+.publicationCard {
   display: flex;
   justify-content: space-between;
   font-family: "Lato";
@@ -16,49 +16,25 @@
   @include fluid-size(width, 768px, 1920px, 271px, 678px);
   @include fluid-size(height, 768px, 1920px, 240px, 601px);
 
+  @media (max-width: 768px) {
+    @include fluid-size(width, 320px, 768px, 271px, 406px);
+    @include fluid-size(height, 320px, 768px, 240px, 360px);
+  }
+
   .photoImg {
     width: 100%;
     height: auto;
     max-width: 678px;
     min-width: 271px;
 
+    &:hover {
+      cursor: pointer;
+    }
+
     @media (max-width: 768px) {
       max-width: 406px;
       min-width: 180px;
     }
-  }
-
-  .playButton {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    display: flex;
-    border: none;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-
-  @media (max-width: 768px) {
-    @include fluid-size(width, 320px, 768px, 271px, 406px);
-    @include fluid-size(height, 320px, 768px, 240px, 360px);
-  }
-}
-
-.playIcon {
-  width: 70px;
-  height: 70px;
-
-  @media (max-width: 768px) {
-    width: 50px;
-    height: 50px;
-  }
-
-  @media (max-width: 320px) {
-    width: 40px;
-    height: 40px;
   }
 }
 
@@ -74,7 +50,7 @@
   }
 }
 
-.videoButton {
+.bookButton {
   margin-top: auto;
 
   @include fluid-type(768px, 1920px, 12px, 20px);
