feat(Partnership): create Partnership page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,10 +13,20 @@ body {
   height: 100%;
   margin: 0 auto;
   max-width: 1920px;
+  font-family: "Lato", sans-serif;
 }
 
 button,
 input,
 textarea {
   font-family: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $text-color-secondary;
 }
