--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,10 @@ $l: 1279px;
 
 $base-color: #f9f8f1;
 $green: #1b572c;
+$green-dark: #0b3721;
+$green-light: #3e7b52;
+$background-light: #f2f1e8;
+$background-light-gray: #f4f4f4;
+
+$text-color-secondary: #2e2e27;
+$text-color-primary: #000000;
