feat: add skeleton components for cards and images

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $green-dark: #0b3721;
 $green-light: #3e7b52;
 $background-light: #f2f1e8;
 $background-light-gray: #f4f4f4;
+$background-medium-gray: #d9d9d9;
 
 $text-color-secondary: #2e2e27;
 $text-color-primary: #000000;
