--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,21 +1,17 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../assets/fonts/Roboto-VariableFont_wdth,wght.ttf")
-    format("truetype");
+  src: url("../assets/fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
   font-family: "Roboto";
-  src: url("../assets/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf")
-    format("truetype");
+  src: url("../assets/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-style: italic;
   font-display: swap;
 }
-
 @font-face {
   font-family: "Lato";
   src: url("../assets/fonts/Lato-Light.ttf") format("truetype");
@@ -23,7 +19,6 @@
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
   font-family: "Lato";
   src: url("../assets/fonts/Lato-Regular.ttf") format("truetype");
@@ -31,7 +26,6 @@
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
   font-family: "Lato";
   src: url("../assets/fonts/Lato-Bold.ttf") format("truetype");
@@ -39,11 +33,10 @@
   font-style: normal;
   font-display: swap;
 }
-
 @font-face {
   font-family: "Lato";
   src: url("../assets/fonts/Lato-Light.ttf") format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
-}
+}/*# sourceMappingURL=fonts.css.map */
