--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../assets/fonts/Roboto-VariableFont_wdth,wght.ttf")
-    format("truetype");
+  src: url("../assets/fonts/Roboto-VariableFont_wdth,wght.woff2")
+    format("woff2");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("../assets/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf")
-    format("truetype");
+  src: url("../assets/fonts/Roboto-Italic-VariableFont_wdth,wght.woff2")
+    format("woff2");
   font-weight: 100 900;
   font-style: italic;
   font-display: swap;
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Light.ttf") format("truetype");
+  src: url("../assets/fonts/Lato-Light.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Regular.ttf") format("truetype");
+  src: url("../assets/fonts/Lato-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -34,16 +34,8 @@
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Bold.ttf") format("truetype");
+  src: url("../assets/fonts/Lato-Bold.woff2") format("woff2");
   font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Lato";
-  src: url("../assets/fonts/Lato-Light.ttf") format("truetype");
-  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
