--- a/src/components/Home/Calendar/Calendar.module.scss
+++ b/src/components/Home/Calendar/Calendar.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  background-color: #fff;
 
   @include fluid-size("padding-top", 768px, 1920px, 40px, 100px);
   @include fluid-size("padding-bottom", 768px, 1920px, 40px, 100px);
